# deep-learning-impl

./: .gitignore  README.md  flake.nix  pyproject.toml
02-autograd/: Autograd_Imple_team4.ipynb  Autograd_imple_class_team4.ipynb  autograd.py  mnist.py
02-autograd/report/: lab2_autograd_team4.bib  lab2_autograd_team4.tex  lucas-report.cls
03-dp/: run_cluster_dp.sh
03-dp/my_lib/: init_dataset.py
03-dp/scripts/: init.sh
04-ddp-dali/: .gitignore  Dockerfile  plot.py  requirements.txt  run_cluster_ddp.sh  run_cluster_ddp_dali.sh  run_cluster_dp.sh  train_cifar.py
04-ddp-dali/handler/DALI/: cifar10_loader.py
04-ddp-dali/handler/DDP/: cifar10_loader.py  model.py  train.py  utils.py
04-ddp-dali/handler/DP/: cifar10_loader.py  train.py
04-ddp-dali/my_lib/: init_dataset.py  train_test.py  utils.py
04-ddp-dali/scripts/: init.sh  launch.sh  run_ddp.sh  run_ddp_dali.sh  run_dp.sh
05-custom-bn/: setup.py
05-custom-bn/python_custom_ops_bn/: __init__.py  ops.py
05-custom-bn/test/: test_batchnorm.py  test_batchnorm_plot.py
06-triton-bn/: .gitignore  benchmark_batchnorm.py  pyproject.toml  setup.py  test_batchnorm.py  test_batchnorm_backward.py
06-triton-bn/custom_ops_bn/: __init__.py  ops.py  triton_batchnorm.py
06-triton-bn/custom_ops_bn/csrc/: batchnorm.cpp
06-triton-bn/custom_ops_bn/csrc/cuda/: batchnorm.cu
07-mobilenet-rpi/: .gitignore  npu_bench.py  onnx_bench.py  plot.py  pytorch_bench.py
08-llm-rpi/: client.py  server.py  server_fastapi.py  server_flask.py
09-vllm/: paged_attention_comparison.py  plot.py  pyproject.toml  vllm_vs_transformers.py
