[project]
name = "dl-impl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.7.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = ["ipykernel>=6.30.1"]
cuda = ["nvidia-dali-cuda120>=1.51.2"]
