[project]
name = "dl-impl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=1,<2",
    "seaborn>=0.13.2",
    "torch~=2.4.1",
    "torchvision~=0.19.1",
    "torch>=2.4.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = ["ipykernel>=6.30.1"]
cuda = ["nvidia-dali-cuda120>=1.51.2", "custom-ops-bn"]
hailo = [
    "hailort",
    "onnx~=1.17.0",
    "onnxruntime~=1.23.2",
]

[tool.uv.sources]
custom-ops-bn = { path = "06-triton-bn", editable = true }
hailort = { path = "07-mobilenet-rpi/hailort-4.19.0-cp311-cp311-linux_aarch64.whl" }
